added ComfyUI registry publish CI
Signed-off-by: Alexander Piskun <bigcat88@icloud.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,6 @@ lint.mccabe.max-complexity = 20
 profile = "black"
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "visionatrix"
 DisplayName = "ComfyUI-Gemini"
 Icon = ""
