--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "comfyui-gemini"
 version = "1.0.0"
 description = "Nodes for Google Gemini API, focusing on backward compatibility and stability within ComfyUI."
-license = "LICENSE"
+license = { file = "LICENSE" }
 requires-python = ">=3.10"
 classifiers = [
   "Programming Language :: Python :: 3 :: Only",
